Creating modal style and components

--- a/static/local/ext/pug/components/modals/_event-settings.pug
+++ b/static/local/ext/pug/components/modals/_event-settings.pug
@@ -8,16 +8,12 @@
             form
                 .modal-body
                     label#event-settings-label-name
-                    .form-group.position-relative
+                    fieldset.form-group.position-relative
                         input.form-control#event-settings-input-name(type="text")
-                        //.form-control-position
-                            i.la.la-envelope.font-medium-5.line-height-1.text-muted.icon-align
-
+                        
                     label#event-settings-label-edition
                     .form-group.position-relative
                         input.form-control#event-settings-input-edition(type="text")
-                        //.form-control-position
-                            i.la.la-lock.font-large-1.line-height-1.text-muted.icon-align
                     
                     label#event-settings-label-description
                     .form-group.position-relative
