--- a/static/local/ext/pug/components/modals/_speaker-register.pug
+++ b/static/local/ext/pug/components/modals/_speaker-register.pug
@@ -5,7 +5,7 @@
                 h3.modal-title#speaker_register_label_title
                 button(type="button", class="close", data-dismiss="modal", aria-label="Close")
                 span(aria-hidden="true") ×
-            form
+            form#dataForm
                 .modal-body
                     .bs-callout-primary.callout-border-left.callout-square.p-1.mb-2
                         strong Novos palestrantes
@@ -71,7 +71,7 @@
                     fieldset.form-group.form-group-style
                         label#speaker_register_label_avatar.m-0
                         .custom-file
-                            input.custom-file-input.input-sm.m-0.p-0#speaker_register_data_avatar(type="file")
+                            input.custom-file-input.input-sm.m-0.p-0#speaker_register_data_avatar(name="upavatar",type="file")
                             label.custom-file-label.input-sm.m-0.p-0#speaker_register_label_avatar2(for="speaker_register_data_avatar" , aria-describedby="speaker_register_data_avatar")
                 hr
                 .modal-footer
