--- a/static/local/ext/pug/components/modals/_speaker-register.pug
+++ b/static/local/ext/pug/components/modals/_speaker-register.pug
@@ -35,38 +35,38 @@
                     fieldset.form-group.form-group-style
                         label#speaker_register_label_socialNetworks.m-0
                         small.text-muted
-                            i facebook:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-facebook(type="text")
+                            i#speaker_register_label_socialNetworks-facebook
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-facebook(type="text")
                         small.text-muted
-                            i twitter:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-twitter(type="text")
+                            i#speaker_register_label_socialNetworks-twitter
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-twitter(type="text")
                         small.text-muted
-                            i lattes:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-lattes(type="text")
+                            i#speaker_register_label_socialNetworks-lattes
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-lattes(type="text")
                         small.text-muted
-                            i github:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-github(type="text")
+                            i#speaker_register_label_socialNetworks-github
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-github(type="text")
                         small.text-muted
-                            i youtube:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-youtube(type="text")
+                            i#speaker_register_label_socialNetworks-youtube
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-youtube(type="text")
                         small.text-muted
-                            i spotify:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-spotify(type="text")
+                            i#speaker_register_label_socialNetworks-spotify
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-spotify(type="text")
                         small.text-muted
-                            i behance:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-behance(type="text")
+                            i#speaker_register_label_socialNetworks-behance
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-behance(type="text")
                         small.text-muted
-                            i linkedin:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-linkedin(type="text")
+                            i#speaker_register_label_socialNetworks-linkedin
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-linkedin(type="text")
                         small.text-muted
-                            i skype:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-skype(type="text")
+                            i#speaker_register_label_socialNetworks-skype
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-skype(type="text")
                         small.text-muted
-                            i pinterest:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-pinterest(type="text")
+                            i#speaker_register_label_socialNetworks-pinterest
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-pinterest(type="text")
                         small.text-muted
-                            i blog:
-                        input.form-control.input-sm.m-0.p-0#speaker_register_label_socialNetworks-blog(type="text")
+                            i#speaker_register_label_socialNetworks-blog
+                        input.form-control.input-sm.m-0.p-0#speaker_register_data_socialNetworks-blog(type="text")
 
                     fieldset.form-group.form-group-style
                         label#speaker_register_label_avatar.m-0
@@ -77,6 +77,6 @@
                 .modal-footer
                     //input.btn.btn-outline-secondary.btn-lg(type="reset", data-dismiss="modal", value="cancelar")
                     button.btn.btn-outline-primary.btn-lg#speaker_register_button_add(type="button")
-script(src="/local/ext/app-assets/js/scripts/ui/breadcrumbs-with-stats.min.js")
-script(src="/local/ext/app-assets/js/scripts/forms/custom-file-input.min.js")
-script(src="/local/ext/app-assets/vendors/js/forms/tags/form-field.js")
+//- script(src="/local/ext/app-assets/js/scripts/ui/breadcrumbs-with-stats.min.js")
+//- script(src="/local/ext/app-assets/js/scripts/forms/custom-file-input.min.js")
+//- script(src="/local/ext/app-assets/vendors/js/forms/tags/form-field.js")
