Task #19 Listation completed.

--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -342,8 +342,8 @@ include components/modals/_speaker-register.pug
                         th#card05_table_label_column02
                         th#card05_table_label_column03
                         th#card05_table_label_column04
-                    tbody
-                      tr
+                    tbody#speakerTable
+                      //tr
                         td.text-center
                           span.avatar.avatar-busy
                             img(src='/local/ext/app-assets/images/portrait/small/avatar-s-8.png' alt='avatar' data-toggle='tooltip' data-placement='right' title='Mary Salazar')
