--- a/static/local/ext/pug/components/modals/_speaker-register.pug
+++ b/static/local/ext/pug/components/modals/_speaker-register.pug
@@ -6,6 +6,7 @@
                 button(type="button", class="close", data-dismiss="modal", aria-label="Close")
                 span(aria-hidden="true") ×
             form#dataForm
+                input#speaker_register_data_id(type="hidden")
                 .modal-body
                     .bs-callout-primary.callout-border-left.callout-square.p-1.mb-2
                         strong Novos palestrantes
