--- a/static/local/ext/pug/components/_footer.pug
+++ b/static/local/ext/pug/components/_footer.pug
@@ -1,4 +1,4 @@
-footer.footer.footer-static.footer-light.navbar-shadow
+footer.footer.footer-static.footer-dark.navbar-shadow.bg-secondary
   p.clearfix.blue-grey.lighten-2.text-sm-center.mb-0.px-2
     span.float-md-left.d-block.d-md-inline-block#footer-copyright
     span.float-md-right.d-none.d-lg-block#footer-developed-by
