--- a/static/local/ext/pug/components/_header.pug
+++ b/static/local/ext/pug/components/_header.pug
@@ -1,4 +1,4 @@
-nav.header-navbar.navbar-expand-md.navbar.navbar-with-menu.navbar-without-dd-arrow.navbar-static-top.navbar-dark.navbar-brand-center
+nav.header-navbar.navbar-expand-md.navbar.navbar-with-menu.navbar-without-dd-arrow.navbar-static-top.navbar-dark.navbar-brand-center.bg-secondary
 	.navbar-wrapper
 		.navbar-header
 			ul.nav.navbar-nav.flex-row
@@ -17,10 +17,10 @@ nav.header-navbar.navbar-expand-md.navbar.navbar-with-menu.navbar-without-dd-arr
 				ul.nav.navbar-nav.mr-auto.float-left
 					li.nav-item
 						a.nav-link.nav-link-expand.mx-md-1.mx-0(href='#')
-							i.material-icons fullscreen
+							i.la.la-expand-arrows-alt
 					li.dropdown.nav-item.mega-dropdown.d-none.d-lg-block
-						a.dropdown-toggle.nav-link#navbar-link-navigator(href='#' data-toggle='dropdown')
-							i.material-icons menu
+						a.dropdown-toggle.nav-link(href='#' data-toggle='dropdown')
+							i.la.la-bars
 						ul.mega-dropdown-menu.dropdown-menu.row.p-1
 							li.col-md-4.bg-dark.p-2
 								h3.pink.mb-1.font-weight-bold#navbar-about-title
