--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -8,9 +8,10 @@ head
   meta(name='author' content='PIXINVENT')
   title
   include settings/_link-imports.pug
-  link(rel='stylesheet', type='text/css', href='/local/ext/app-assets/css/core/menu/menu-types/material-horizontal-menu.min.css')
-  link(rel='stylesheet', type='text/css', href='/local/ext/app-assets/css/pages/dashboard-support.min.css')
+  //- link(rel='stylesheet', type='text/css', href='/local/ext/app-assets/css/core/menu/menu-types/material-horizontal-menu.min.css')
+  //- link(rel='stylesheet', type='text/css', href='/local/ext/app-assets/css/pages/dashboard-support.min.css')
   link(rel="stylesheet", type="text/css", href="/local/ext/app-assets/css/plugins/calendars/clndr.min.css")
+  //- link(rel="stylesheet", type="text/css", href='/local/ext/app-assets/css/core/colors/palette-gradient.min.css')
   
 include components/_header.pug
 include components/_navbar.pug
@@ -20,11 +21,11 @@ include components/modals/_speaker-register.pug
 .app-content.content(sisgepac-page="index")
   .content-header.row
   .content-overlay
-  .content-wrapper
+  .content-wrapper.bg-secondary
     .content-body
       .row.card-icons
           .col-12
-            .card.bg-dark
+            .card.bg-white
               .card-content
                 .card-body
                   .row
@@ -32,55 +33,55 @@ include components/modals/_speaker-register.pug
                       .media.d-flex.p-2
                         .align-self-center
                           i.icon-camera.font-large-1.blue-grey.d-block.mb-1
-                          span.text-muted.text-right.white O quanto minha página está configurada
+                          span.text-muted.text-right.text-white O quanto minha página está configurada
                         .media-body.text-right
-                          span.font-large-2.text-bold-300.white 579
+                          span.font-large-2.text-bold-300.text-dark 579
                       .progress.mt-1.mb-0(style="height: 7px;")
-                        .progress-bar.bg-white(role="progressbar", style="width: 80%", aria-valuenow="80", aria-valuemin="0", aria-valuemax="100")
+                        .progress-bar.bg-gradient-x-danger(role="progressbar", style="width: 80%", aria-valuenow="80", aria-valuemin="0", aria-valuemax="100")
                     
                     .col-lg-3.col-md-6.col-sm-12.border-right-blue-grey.border-right-lighten-5
                       .media.d-flex.p-2
                         .align-self-center
                           i.icon-user.font-large-1.blue-grey.d-block.mb-1
-                          span.text-muted.text-right.white New Clients
+                          span.text-muted.text-right.text-dark New Clients
                         .media-body.text-right
-                          span.font-large-2.text-bold-300.white 423
+                          span.font-large-2.text-bold-300.text-dark 423
                       .progress.mt-1.mb-0(style="height: 7px;")
-                        .progress-bar.bg-white(role="progressbar", style="width: 45%", aria-valuenow="45", aria-valuemin="0", aria-valuemax="100")
+                        .progress-bar.bg-gradient-x-danger(role="progressbar", style="width: 45%", aria-valuenow="45", aria-valuemin="0", aria-valuemax="100")
                     .col-lg-3.col-md-6.col-sm-12.border-right-blue-grey.border-right-lighten-5
                       .media.d-flex.p-2
                         .align-self-center
                           i.icon-bulb.font-large-1.blue-grey.d-block.mb-1
-                          span.text-muted.text-right.white Conversion Rate
+                          span.text-muted.text-right.text-dark Conversion Rate
                         .media-body.text-right
-                          span.font-large-2.text-bold-300.white 61%
+                          span.font-large-2.text-bold-300.text-dark 61%
                       .progress.mt-1.mb-0(style="height: 7px;")
-                        .progress-bar.bg-white(role="progressbar", style="width: 75%", aria-valuenow="75", aria-valuemin="0", aria-valuemax="100")
+                        .progress-bar.bg-gradient-x-danger(role="progressbar", style="width: 75%", aria-valuenow="75", aria-valuemin="0", aria-valuemax="100")
                     .col-lg-3.col-md-6.col-sm-12
                       .media.d-flex.p-2
                         .align-self-center
                           i.icon-wallet.font-large-1.blue-grey.d-block.mb-1
-                          span.text-muted.text-right.white Sales
+                          span.text-muted.text-right.text-dark Sales
                         .media-body.text-right
-                          span.font-large-2.text-bold-300.white $687
+                          span.font-large-2.text-bold-300.text-dark $687
                       .progress.mt-1.mb-0(style="height: 7px;")
-                        .progress-bar.bg-white(role="progressbar", style="width: 60%", aria-valuenow="60", aria-valuemin="0", aria-valuemax="100")
+                        .progress-bar.bg-gradient-x-danger(role="progressbar", style="width: 60%", aria-valuenow="60", aria-valuemin="0", aria-valuemax="100")
       // Payment Methods & Purchase History
       .row.match-height
         .col-xl-6.col-lg-12.col-sm-12
-          .card
+          .card.bg-white
               .card-header
-                  h4.card-title.dark#event-occurrence-title
+                  h4.card-title.text-dark#event-occurrence-title
               .card-body
                   //p.card-text.white This is the most basic eample with html template and events to be shown on the calendar.</p>
-                  #clndr-default.overflow-hidden.bg-teal.bg-lighten-3
+                  #clndr-default.overflow-hidden.bg-danger.bg-lighten-3
                     .clndr
-                      .clndr-controls.bg-teal
+                      .clndr-controls.bg-danger
                           .clndr-previous-button &lt;
                           .clndr-next-button &gt;
                           .current-month January 2020
-                      .clndr-grid.bg-teal.bg-lighten-5
-                        .days-of-the-week.clearfix.bg-teal.bg-lighten-3
+                      .clndr-grid.bg-danger.bg-lighten-5
+                        .days-of-the-week.clearfix.bg-danger.bg-lighten-3
                           .header-day S
                           .header-day M
                           .header-day T
@@ -165,7 +166,7 @@ include components/modals/_speaker-register.pug
                             span.day-number 1
                       
                       .event-listing
-                        .event-listing-title.bg-teal.bg-lighten-3 Event this month
+                        .event-listing-title.bg-danger.bg-lighten-3 Event this month
                           .event-item.font-small-3
                             .event-item-day.font-small-2 2020-01-10
                             .event-item-name.text-bold-600.Persian Kitten Auction
@@ -181,18 +182,18 @@ include components/modals/_speaker-register.pug
                             .event-item-name.text-bold-600 Kitten Demonstration
                             .event-item-location Center for Beautiful Cats
         .col-xl-6.col-lg-12.col-sm-12
-          .card
+          .card.bg-white
               .card-header
-                  h4.card-title.dark teste
+                  h4.card-title.text-dark teste
               .card-body
                 .col-12
 
                   
       .row.match-height
         .col-xl-4.col-lg-12.col-sm-12
-          .card
+          .card.bg-white
               .card-header
-                  h4.card-title.dark#event-information-title
+                  h4.card-title.text-dark#event-information-title
               .card-body
                 .col-12
                   table.table.table-borderless
@@ -216,9 +217,9 @@ include components/modals/_speaker-register.pug
                         td#card02_label_event-type
                         td.users-view-name#card02_data_event-type
         .col-xl-4.col-lg-12.col-sm-12
-          .card
+          .card.bg-white
             .card-header
-              h4.card-title.dark#card03_label_event-contact-info
+              h4.card-title.text-dark#card03_label_event-contact-info
             .card-body
               .col-12
                 table.table.table-borderless
@@ -256,9 +257,9 @@ include components/modals/_speaker-register.pug
                       td
                         a#card03_data_event-email
         .col-xl-4.col-lg-12.col-sm-12
-          .card
+          .card.bg-white
               .card-header
-                  h4.card-title.dark#card04_label_title
+                  h4.card-title.text-dark#card04_label_title
               .card-body
                 .col-12
                   iframe#card03_map(width="100%", height="350" ,frameborder="0", scrolling="no", marginheight="0" ,marginwidth="0", src="https://www.openstreetmap.org/export/embed.html?bbox=-45.011050701141365%2C-21.248062254385673%2C-44.98272657394409%2C-21.230062071277242&amp;layer=mapnik&amp;marker=-21.239062437563888%2C-44.996888637542725", style="border: 3px solid #009688")
@@ -328,15 +329,15 @@ include components/modals/_speaker-register.pug
                       tr
                         th.text-right(colspan="4")
                           .btn-group.btn-group-sm(role="group", aria-label="Basic example")
-                            a.btn.btn-success.text-white#card05_button_create-speaker
-                              i.material-icons#card05_button_create-speaker-icon
+                            button.btn.btn-outline-success#card05_button_create-speaker
+                              i.la.la-plus.font-medium-1.mr-1
                               span#card05_button_create-speaker-text
-                            button.btn.btn-primary(type="button")
-                              i.material-icons search
-                              |Pesquisar
-                            button.btn.btn-danger(type="button")
-                              i.material-icons delete_forever
-                              |remover
+                            button.btn.btn-outline-primary(type="button")
+                              i.la.la-search.font-medium-1.mr-1
+                              span#card05_button_search-speaker-text
+                            button.btn.btn-outline-danger(type="button")
+                              i.la.la-trash-alt.font-medium-1.mr-1
+                              span#card05_button_remove-speaker-text
                       tr
                         th#card05_table_label_column01
                         th#card05_table_label_column02
