--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -18,6 +18,8 @@ include components/_navbar.pug
 include components/modals/_event-settings.pug
 include components/modals/_speaker-register.pug
 include components/modals/_activity-register.pug
+.loader_box.d-none#loader
+  .loader
 
 .app-content.content(sisgepac-page="index")
   .content-header.row
