--- a/static/local/ext/pug/settings/_link-imports.pug
+++ b/static/local/ext/pug/settings/_link-imports.pug
@@ -9,6 +9,7 @@ link(rel="stylesheet" type="text/css" href="/local/ext/app-assets/css/bootstrap.
 link(rel="stylesheet" type="text/css" href="/local/ext/app-assets/css/bootstrap-extended.min.css")
 link(rel="stylesheet" type="text/css" href="/local/ext/app-assets/css/colors.min.css")
 link(rel="stylesheet" type="text/css" href="/local/ext/app-assets/css/components.min.css")
+link(rel="stylesheet" type="text/css" href="/local/ext/app-assets/css/custom.css")
 
 link(rel="stylesheet" type="text/css" href="/local/ext/app-assets/css/core/menu/menu-types/horizontal-menu.min.css")
 link(rel="stylesheet" type="text/css" href="/local/ext/app-assets/css/core/colors/palette-gradient.min.css")
