Solving problems with page reload data

--- a/static/local/ext/pug/components/_publish-button.pug
+++ b/static/local/ext/pug/components/_publish-button.pug
@@ -1,4 +1,4 @@
 .buy-now
-    a.btn.btn-info.btn-glow.round.px-2(href='https://1.envato.market/modern_admin' target='_blank') Publicar Página
+    a.btn.btn-danger.btn-glow.round.px-2(href='https://1.envato.market/modern_admin' target='_blank') Publicar Página
 .sidenav-overlay
 .drag-target
