--- a/static/local/ext/app-assets/css/custom.css
+++ b/static/local/ext/app-assets/css/custom.css
@@ -2,11 +2,13 @@
 
     width: 100%;
     height: 100vh;
-    background: rgba(0,0,0,.5);
+    background: rgba(255,255,255,.8);
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
+    top: 0;
+    right: 0;
     z-index: 1000;
 
 }
