Implementing task #50. Change the interface node elements list to separated another class instance.

--- a/static/local/ext/pug/components/modals/_activity-register.pug
+++ b/static/local/ext/pug/components/modals/_activity-register.pug
@@ -90,6 +90,18 @@
                         input.form-control.input-sm.m-0.p-0#activity_register_data_location(type="text")
                         p.text-left
                             small.text-muted#activity_register_label_location-helper
+                    
+                    fieldset.form-group.form-group-style.border-light
+                        label.m-0#activity_register_label_geo-location
+                        input.form-control.input-sm.m-0.p-0#activity_register_data_geo-location(type="text")
+                        p.text-left
+                            small.text-muted#activity_register_label_geo-location-helper
+
+                    fieldset.form-group.form-group-style.border-light
+                        label.m-0#activity_register_label_restriction
+                        input.form-control.input-sm.m-0.p-0#activity_register_data_restriction(type="text")
+                        p.text-left
+                            small.text-muted#activity_register_label_restriction-helper
 
                     fieldset.form-group.form-group-style.border-light
                         label#activity_register_label_avatar.m-0
