Task finished. Activity register implemented.

--- a/static/local/ext/pug/components/modals/_activity-register.pug
+++ b/static/local/ext/pug/components/modals/_activity-register.pug
@@ -5,7 +5,7 @@
                 h3.modal-title.text-white#activity_register_modal_title
                 button(type="button", class="close", data-dismiss="modal", aria-label="Close")
                 i.la.la-times.text-white(aria-hidden="true")
-            form#dataForm
+            form#dataFormActivity
                 input#activity_register_data_id(type="hidden")
                 .modal-body
                     .bs-callout-primary.callout-border-left.callout-square.p-1.mb-2
@@ -93,7 +93,7 @@
                     
                     fieldset.form-group.form-group-style.border-light
                         label.m-0#activity_register_label_geo-location
-                        input.form-control.input-sm.m-0.p-0#activity_register_data_geo-location(type="text")
+                        //input.form-control.input-sm.m-0.p-0#activity_register_data_geo-location(type="text")
                         p.text-left
                             small.text-muted#activity_register_label_geo-location-helper
 
