--- a/static/local/ext/pug/components/modals/_speaker-register.pug
+++ b/static/local/ext/pug/components/modals/_speaker-register.pug
@@ -5,7 +5,7 @@
                 h3.modal-title.text-white#speaker_register_label_title
                 button(type="button", class="close", data-dismiss="modal", aria-label="Close")
                 span(aria-hidden="true") ×
-            form#dataForm
+            form#dataFormSpeaker
                 input#speaker_register_data_id(type="hidden")
                 .modal-body
                     .bs-callout-primary.callout-border-left.callout-square.p-1.mb-2
