--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -399,8 +399,8 @@ include components/modals/_activity-register.pug
                         th#card06_table_label_column02
                         th#card06_table_label_column03
                         th#card06_table_label_column04
-                    tbody
-                      tr
+                    tbody#activityTable
+                      //tr
                         td.text-center
                           span.avatar.avatar-busy
                             img(src='/local/ext/app-assets/images/portrait/small/avatar-s-8.png' alt='avatar' data-toggle='tooltip' data-placement='right' title='Mary Salazar')
